[gd_scene load_steps=12 format=3 uid="uid://bomodjcon6ive"]

[ext_resource type="Texture2D" uid="uid://7ciw1q6806t" path="res://assets/player.png" id="1_ojlyv"]
[ext_resource type="Script" path="res://player/Player.gd" id="2_6lu86"]
[ext_resource type="PackedScene" uid="uid://dkh85xxdd1ipo" path="res://player/ControlPalette/ControlPalette.tscn" id="3_j745s"]
[ext_resource type="Script" path="res://player/ChargeParticles.gd" id="3_y0tjq"]

[sub_resource type="Animation" id="Animation_5os7n"]
resource_name = "attack"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 1.8, 2),
"transitions": PackedFloat32Array(9.18958, 27.8576, 1, 50.2134),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 1), Vector2(0.5, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.6, 1.7, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(5, 0), Vector2(-5, 0), Vector2(10, 0), Vector2(-5, 0), Vector2(5, 0), Vector2(-5, 0), Vector2(-10, 0), Vector2(-10, 0), Vector2(50, 0), Vector2(50, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_gkwx7"]
resource_name = "block"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.75, 0.9), Vector2(0.75, 0.9), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-10, 0), Vector2(-10, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_0jy22"]
resource_name = "charge"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 0.8), Vector2(1.5, 0.8), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(-5, 0), Vector2(5, 0), Vector2(-5, 0), Vector2(5, 0), Vector2(-5, 0), Vector2(5, 0), Vector2(-5, 0), Vector2(5, 0), Vector2(-5, 0), Vector2(5, 0), Vector2(-5, 0), Vector2(5, 0)]
}

[sub_resource type="Animation" id="Animation_vjv14"]
resource_name = "daze"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-50, 0), Vector2(50, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_toum6"]
resource_name = "defeat"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.2, 2.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, -1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-11, -7), Vector2(-28, -1), Vector2(-28, -1), Vector2(-21, -15), Vector2(0, 0), Vector2(-17, -18), Vector2(-23, -1), Vector2(-23, -1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5ktlv"]
_data = {
"attack": SubResource("Animation_5os7n"),
"block": SubResource("Animation_gkwx7"),
"charge": SubResource("Animation_0jy22"),
"daze": SubResource("Animation_vjv14"),
"defeat": SubResource("Animation_toum6")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_ho1c5"]
properties/0/path = NodePath(".:health")
properties/0/spawn = true
properties/0/sync = true
properties/1/path = NodePath(".:charge")
properties/1/spawn = true
properties/1/sync = true
properties/2/path = NodePath("ControlPalette:pressed_actions_stack")
properties/2/spawn = true
properties/2/sync = true
properties/3/path = NodePath("ControlPalette:disabled_actions")
properties/3/spawn = true
properties/3/sync = true

[node name="Player" type="Node2D"]
script = ExtResource("2_6lu86")

[node name="PlayerSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_ojlyv")
hframes = 2

[node name="ChargeParticles" type="CPUParticles2D" parent="PlayerSprite"]
z_index = -1
position = Vector2(0, 15)
lifetime = 1.5
direction = Vector2(-0.3, -1)
spread = 90.0
gravity = Vector2(0, -115)
initial_velocity_min = 30.0
initial_velocity_max = 60.0
angular_velocity_min = 20.0
angular_velocity_max = 90.0
linear_accel_max = 45.0
angle_min = -50.0
angle_max = 50.0
scale_amount_min = 5.0
scale_amount_max = 20.0
script = ExtResource("3_y0tjq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerSprite"]
speed_scale = 2.0
libraries = {
"": SubResource("AnimationLibrary_5ktlv")
}

[node name="ControlPalette" parent="." instance=ExtResource("3_j745s")]
position = Vector2(0, 200)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_interval = 0.1
replication_config = SubResource("SceneReplicationConfig_ho1c5")

[connection signal="charge_changed" from="." to="PlayerSprite/ChargeParticles" method="_on_charge_changed"]
